deploy/k8s/prod.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prod
---
apiVersion: v1
kind: Service
metadata:
  name: gf-config-service
  namespace: prod
spec:
  type: ClusterIP
  selector:
    app: gf-config
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gf-config-deployment
  namespace: prod
  labels:
    app: gf-config
  annotations:
    rollout: ""
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gf-config
  template:
    metadata:
      labels:
        app: gf-config
    spec:
      containers:
        - name: golang
          image: mucunga90/gf-config:prod
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              protocol: TCP
              containerPort: 8080
          volumeMounts:
            - name: dotenv
              mountPath: ./.env
              subPath: .env
              readOnly: true
      volumes:
        - name: dotenv
          secret:
            secretName: gf-config-secret
            items:
              - key: .env
                path: ./.env
