deploy/k8s/qa.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: qa
---
apiVersion: v1
kind: Service
metadata:
  name: gf-config-service
  namespace: qa
spec:
  type: NodePort
  selector:
    app: gf-config
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gf-config-deployment
  namespace: qa
  labels:
    app: gf-config
  annotations:
    rollout: ""
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gf-config
  template:
    metadata:
      labels:
        app: gf-config
    spec:
      containers:
        - name: golang
          image: mucunga90/gf-config:qa
          imagePullPolicy: Always
          ports:
            - name: http
              protocol: TCP
              containerPort: 5000
          volumeMounts:
            - name: dotenv
              mountPath: ./.env
              subPath: .env
              readOnly: true
      volumes:
        - name: dotenv
          secret:
            secretName: gf-config-secret
            items:
              - key: .env
                path: ./.env
