deploy/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backendapi
  namespace: qa
spec:
  rules:
  - host: qa.localhost.com
    http:
      paths:
      - path: /config/*
        pathType: Prefix
        backend:
          service:
            name: gf-config-service
            port:
              number: 80
